tests/good/misc/mandatory-stop.pas
program MandatoryStop;

var i;
begin
    i := 0;
    while (i < 5) and (i < 7) do begin
        WriteLn(i);
        i := i + 1;
    end
end.
