tests/bad/declare-main-function.pas
program declare_main_function;

function main;
begin
    main := 1
end;

begin
end.
